query results in view

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,7 @@
     = csrf_meta_tag
     = javascript_include_tag :application
 %body
-  = yield
+  %div.container-fluid
+    %div.row-fluid
+      = yield
 
