active record issues resolved

--- a/app/views/main_searches/create.html.haml
+++ b/app/views/main_searches/create.html.haml
@@ -8,9 +8,9 @@
         %div
           %p
           %h3
-            =l.flight_id_carrier.name
+            =l.flightid_carrier.name
             Flight Number:
-            =l.flight_id_flight_number    
+            =l.flightid_flight_number    
             from
             =l.departure_airport.city
             =l.departure_airport.airport_code
