--- a/app/views/main_searches/_mainform.html.haml
+++ b/app/views/main_searches/_mainform.html.haml
@@ -1,4 +1,4 @@
-= form_for(@main_search) do |f|
+= form_for @main_search do |f|
   - if @main_search.errors.any?
     .error_messages
       %h2
@@ -6,6 +6,8 @@
           = msg
   = f.fields_for :flight_searches do |builder|
     = render 'flight_search_fields', f: builder    
-  = link_to_add_flight_searches "Add Flight", f, :flight_searches
+  =link_to_add_flight_searches "Add Flight", f, :flight_searches 
+  %a.btn.btn-large.add_flight_search
+  
   <br>
-  = f.submit
+  = f.submit "Find my flights"
