--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     = csrf_meta_tag
     = javascript_include_tag :application
 %body
-  .navbar
+  .navbar.navbar-fixed-top
     .navbar-inner
       .container
         .row
