--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require jquery.ui.datepicker
  *= require bootstrap_and_overrides
 */
+
+/*.well .remove_flight_search {
+  position:relative;
+  bottom: 10px;
+  left: 370px;
+}*/
