--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require bootstrap_and_overrides
 */
 
+.user_header {margin-top: 15px; float: left; height: 40px; line-height: 40px; color: white; text-align: right; }
+
 /*.well .remove_flight_search {
   position:relative;
   bottom: 10px;
