--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,15 @@
         .row
           .span8
             %a.title.brand(href="/") Delayo
+          .span4.user_header
+            - if user_signed_in?
+              = current_user.email
+              | 
+              = link_to "[Sign out]", destroy_user_session_path, :method => :delete
+            - else 
+              = link_to "[Sign up]", new_user_registration_path
+              |
+              = link_to "[Sign in]", new_user_session_path
   .container
     - if flash[:notice]
       .alert.alert-success
