before converting devise views to haml

--- a/app/views/main_searches/_mainform.html.haml
+++ b/app/views/main_searches/_mainform.html.haml
@@ -1,5 +1,6 @@
 %h3
-  Please enter your flight information.
+  Please enter your flight information:
+%p
 = form_for @main_search do |f|
   / - if @main_search.errors.any?
   /   .error_messages
