--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,9 +2,17 @@
 %html
   %head
     %title Front
+    %meta{:charset => "utf-8"}
+    %meta{"http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1"}
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1, maximum-scale=1"}
+    %title= content_for?(:title) ? yield(:title) : "Delayo"
+    %meta{:content => "", :name => "description"}
+    %meta{:content => "", :name => "author"}    
     = stylesheet_link_tag 'application'
     = csrf_meta_tag
-    = javascript_include_tag :application
+    = javascript_include_tag "https://js.stripe.com/v1/", "application"
+    = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
+    
 %body
   .navbar.navbar-fixed-top
     .navbar-inner
@@ -18,15 +26,11 @@
               | 
               = link_to "[Sign out]", destroy_user_session_path, :method => :delete
             - else 
-              = link_to "[Sign up]", new_user_registration_path
-              |
               = link_to "[Sign in]", new_user_session_path
   .container
-    - if flash[:notice]
-      .alert.alert-success
-        = flash[:notice]
-    - if flash[:error]
-      .alert.alert-error
-        = flash[:error]
-
-    = yield
+    .content
+      .row
+        .span12
+          =render 'layouts/messages'
+          = yield
+        %footer
