--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,6 +31,11 @@
     .content
       .row
         .span12
-          =render 'layouts/messages'
+          - if flash[:notice]
+            .alert.alert-success
+              = flash[:notice]
+          - if flash[:error]
+            .alert.alert-error
+              = flash[:error]
           = yield
         %footer
