--- a/app/views/orders/_order_details.html.haml
+++ b/app/views/orders/_order_details.html.haml
@@ -1,3 +1,5 @@
+=content_for (:scripts) do
+  = javascript_include_tag "/main_searches/main_searches.js"
 .row-fluid
   .span9
     %table.table.table-striped.table-bordered
