--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,22 +8,28 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
  *= require_tree .
  *= require jquery.ui.datepicker
  *= require bootstrap_and_overrides
-*/
+ *= require_self
+*/ 
 
-.user_header {margin-top: 15px; float: left; height: 40px; line-height: 40px; color: white; text-align: right; }
+// twitter bootstrap overwrites
 
-.content {
-  background-color: #eee;
-  padding: 20px;
-  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  box-shadow: 0 1px 2px rgba(0,0,0,.15);
+//.user_header {margin-top: 15px; float: left; height: 40px; line-height: 40px; color: white; text-align: right; }
+
+html {
+  background:transparent;
 }
+
+body { 
+    background: url(clouds_bg.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    padding-bottom:50px;
+}
+
+
+
