--- a/app/views/main_searches/new.html.haml
+++ b/app/views/main_searches/new.html.haml
@@ -1,1 +1,7 @@
-=render "mainform"
+= content_for (:scripts) do
+  = javascript_include_tag "main_searches/main_searches.js"
+= render :partial => 'infographic'
+.row-fluid
+  .span12
+    .span5
+      = render "flight_info"
