--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -1,3 +1,6 @@
+=content_for (:scripts) do
+  = javascript_include_tag "https://js.stripe.com/v1/", "order/order.js"
+  = tag :meta, :name => "stripe-key", :content => STRIPE_PUBLIC_KEY
 =form_for @order, {:html => {:class => "form-horizontal"}}  do |f|
   %h3 Please review your order:
   = render :partial => 'order_details'
