--- a/app/assets/stylesheets/main_searches.css.scss
+++ b/app/assets/stylesheets/main_searches.css.scss
@@ -44,7 +44,7 @@
   #airplane_img{
     width:60%;
   }
-  #dollar_signs_img{
+  #money_img{
     width:40%; 
     position:relative;
     top: 25%;
