--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
                   = link_to "Sign out", destroy_user_session_path, :method => :delete
               - else 
                 .btn
-                  = link_to "[Sign in]", new_user_session_path
+                  = link_to "Sign in", new_user_session_path
   .container
     .content
       .row
