--- a/app/views/main_searches/_infographic.html.haml
+++ b/app/views/main_searches/_infographic.html.haml
@@ -11,7 +11,7 @@
       .span3
         =image_tag("airplane.png", :id=>"airplane_img")
       .span3
-        =image_tag("dollar_signs.png", :id=>"dollar_signs_img")
+        =image_tag("money.jpeg", :id=>"money_img")
   %h4
     .row-fluid
       .span3.text
