--- a/app/views/main_searches/_infographic.html.haml
+++ b/app/views/main_searches/_infographic.html.haml
@@ -1,8 +1,8 @@
-.row-fluid.infographic.hidden-phone
+.row-fluid.infographic.hidden-phone.box
   %h2
     .row-fluid
       .span12
-        How it works
+        How flight delay insurance works
     .row-fluid
       .span3        
         =image_tag("airline_ticket.png", :id=>"airline_ticket_img")
