--- a/app/views/shared/_flight_leg_print.html.haml
+++ b/app/views/shared/_flight_leg_print.html.haml
@@ -1,14 +1,19 @@
-=l.departure_time.strftime("%A, %b %d, %Y")
-%br
-=l.flightid_carrier.name
-=l.flightid_flight_number
-%br    
-lv
-=l.departure_time.strftime("%I:%M%p")
-=l.departure_airport.airport_code
-=l.departure_airport.city
-%br
-ar
-=l.arrival_time.strftime("%I:%M%p")
-=l.arrival_airport.airport_code
-=l.arrival_airport.city
+.hidden-phone
+  =l.departure_time.strftime("%A, %b %d, %Y")
+  %br
+  =l.flightid_carrier.name
+  =l.flightid_flight_number
+  %br    
+  lv
+  =l.departure_time.strftime("%I:%M%p")
+  =l.departure_airport.airport_code
+  =l.departure_airport.city
+  %br
+  ar
+  =l.arrival_time.strftime("%I:%M%p")
+  =l.arrival_airport.airport_code
+  =l.arrival_airport.city
+.visible-phone.hidden-tablet.hidden-desktop
+  =l.departure_airport.airport_code
+  .icon-arrow-right
+  =l.arrival_airport.airport_code
