cleaned up more pages

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -88,3 +88,12 @@ body {
   color:gray !important;
 }
 
+.table {
+  th, td {
+    vertical-align: middle;
+    text-align: center;   
+    font-size:medium;
+    font-weight:bold;   
+  }
+}
+
