--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,22 +1,24 @@
-.row
-  = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html=> {:class => "form-horizontal"}) do |f|
-    .span5.well
-      = devise_error_messages!
-      %h3 Sign up
-      .control-group
-        = f.label :email, "E-mail:", :class=> "control-label"
-        .controls
-          = f.email_field :email, :class => "input-medium"
-      .control-group
-        = f.label :password, "Password:", :class=> "control-label"
-        .controls
-          = f.password_field :password, :class => "input-medium"
-      .control-group
-        = f.label :password_confirmation, "Confirm Password:", :class=> "control-label"
-        .controls
-          = f.password_field :password_confirmation, :class => "input-medium"        
-      .form-actions
-        =f.submit "Sign up",:class => "btn btn-primary"
-        <br><br>
-        = render "links"
+= render "/shared/signup_or_signin", :resource => resource, :resource_name => resource_name, :form_type =>"sign_up"
 
+/ .row
+/   = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html=> {:class => "form-horizontal"}) do |f|
+/     .span5.well
+/       = devise_error_messages!
+/       %h3 Sign up
+/       .control-group
+/         = f.label :email, "E-mail:", :class=> "control-label"
+/         .controls
+/           = f.email_field :email, :class => "input-medium"
+/       .control-group
+/         = f.label :password, "Password:", :class=> "control-label"
+/         .controls
+/           = f.password_field :password, :class => "input-medium"
+/       .control-group
+/         = f.label :password_confirmation, "Confirm Password:", :class=> "control-label"
+/         .controls
+/           = f.password_field :password_confirmation, :class => "input-medium"        
+/       .form-actions
+/         =f.submit "Sign up",:class => "btn btn-primary"
+/         <br><br>
+/         = render "links"
+/ 
