--- a/app/views/devise/_signup_or_signin.html.haml
+++ b/app/views/devise/_signup_or_signin.html.haml
@@ -1,9 +1,13 @@
 .row
-  .span6
-    = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html=> {:class => "form-horizontal"}) do |f|
-      .span5.well
+  -if !devise_error_messages!.blank?
+    .span12
+      .alert.alert-error
         = devise_error_messages!
-        %h3 Are you a new user? Pain-free sign up: 
+  .span6
+    - newuser = User.new
+    = form_for(newuser, :url => registration_path(newuser), :html=> {:class => "form-horizontal"}) do |f|
+      .well
+        %h3 New user? Pain-free sign up: 
         <br>
         .control-group
           = f.label :email, "E-mail:", :class=> "control-label"
@@ -18,12 +22,11 @@
           .controls
             = f.password_field :password_confirmation, :class => "input-medium"        
         .form-actions
-          =f.submit "Sign up",:class => "btn btn-primary"
+          =f.submit "Sign up",:class => "btn btn-success btn-large"
   .span6
     = form_for(resource, :as => resource_name, :url => session_path(resource_name), :html=> {:class => "form-horizontal"}) do |f|
-      .span5.well
-        =devise_error_messages!
-        %h3 Are you a returning user? Sign back in:
+      .well
+        %h3 Returning user? Welcome back:
         <br>
         .control-group
           = f.label :email, "E-mail:", :class=> "control-label"
@@ -39,6 +42,6 @@
             .controls
               = f.check_box :remember_me
           .form-actions
-            =f.submit "Sign in", :class => "btn btn-primary"
+            =f.submit "Sign in", :class => "btn btn-primary btn-large"
             <br><br>
             = render "links"
