--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,5 @@
-= render "/shared/signup_or_signin", :resource => resource, :resource_name => resource_name, :form_type =>"sign_up"
-
+= render "signup_or_signin"
+/ 
 / .row
 /   = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html=> {:class => "form-horizontal"}) do |f|
 /     .span5.well
